# Voice-Finance-Buddy

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/finance-assistant/.replit-artifact/: artifact.toml
finance-assistant/: .env.example  ai_agent.py  app.py  charts.py  finance_functions.py  requirements.txt
finance-assistant/.streamlit/: config.toml
