[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "openai>=2.34.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "streamlit>=1.57.0",
]
